# aegis-ai-governance-platform-aws

./: .bandit-baseline.json  .gitignore  .secrets.baseline  AGP-CONFORMANCE.md  AWS-INTERNAL-REVIEW-PACKET.md  AWS-RUN-COST.md  Aegis-Architecture-and-GTM.docx  Aegis-CISO-One-Pager.docx  Aegis-Customer-Prep-and-Deploy-Playbook.docx  Aegis-Leadership-Status-Brief.docx  Aegis-Master-Deck.pptx  Aegis-Pilot-SOW-Template.docx  Aegis-Portfolio-Readiness-Assessment.md  Aegis-ROI-Worksheet.xlsx  Aegis-Sales-Cheat-Sheet.docx  CHANGELOG.md  CONTRIBUTING.md  CUSTOMER-SAFE-DEMO-SCRIPT.md  DEMO.md  DEPLOY-EVERYTHING.md  DEPLOYED-AND-VALIDATED.md  LEADERSHIP-STATUS-BRIEF.md  LICENSE  MATURITY.yaml  NOT-CLAIMS.md  OPERATING-MODEL.md  PORTFOLIO-CONNECTOR-MATURITY.md  PORTFOLIO-EXECUTIVE-SUMMARY.md  PORTFOLIO-MATURITY-SCORECARD.md  PORTFOLIO-START-HERE.md  README.md  RELEASE-PACKET.md  RUNTIME-EVIDENCE-RUNBOOK.md  SA-DEPLOYMENT-RUNBOOK.md  SECURITY-CI.md  SECURITY.md  SOURCES.md  aws_ai_governance_platform_gtm_deck.pptx  claude_code_ai_governance_platform_brief.md
.github/: CODEOWNERS
assurance/: README.md
demo/: clean_account_acceptance.py  test_acceptance.py  (+4 more)
platform_core/: __init__.py  approval_ledger.py  audit_ledger.py  chargeback.py  gateway.py  manifest_loader.py  masker.py  model_gateway.py  policy_engine.py  pyproject.toml  requirements-lock.txt  token_budget.py
platform_core/prod/: __init__.py  budget_manager_ddb.py  cedar_compiler.py  manifest_signing.py  manifest_validator.py
platform_core/tests/: test_agp_conformance.py  test_masker_ner.py  test_no_status_drift.py
(+121 files in other folders)
